2003-05-10  Danilo Schoeneberg <dj@starfire-programming.net>

	* configure.in:
	* providers/Makefile.am:
	* providers/msql/*: first version of mSQL provider.

2003-05-08  C.J. Collier <cjcollier@colliertech.org>

	* doc/C/libgda-docs.sgml: removed extra space in hyperlinks, some
	English corrections, and wrapped shell commands in <PROGRAMLISTING>
	tags to follow the common style.

2003-04-27  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider: fixed the recordset returned from
	get_schema(GDA_CONNECTION_SCHEMA_AGGREGATES)

	* Fixed some compiler warnings.

2003-04-20  Bodo Pfelzer <Bodo.Pfelzer@epost.de>

	* configure.in: fixed typo in MySQL library detection.

2003-04-20  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider: clean up type handling and add support for
	GDA_VALUE_TYPE_TIMESTAMP.

2003-04-19  Steve Fosdick  <gnomedb@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Fixed a bug where
	the index data was not being correctly retreived including
	updating the get_oracle_index_data to take the name of the table
	owner for which it is to find index data.

2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* Improved support for types and fixed bug which caused the Null?
	column to always show "Yes" regardless of whether nulls were
	actually allowed.
	
2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* Oracle Provider - changed error handling -
	gda_oracle_check_result is now a macro rather than a function and
	therefore has access to the compiler __FILE__ and __LINE__ macros
	which are then included as part of the source or the error message.

2003-04-18  Steve Fosdick <gnomedb@pelvoux.demon.co.uk>

	* libgda/providers/oracle/gda-oracle-provider.c: Fixed a bug in
	gda_oracle_provider_get_schema - previously a number of calls were
	made to the function get_oracle_objects which normally returns a
	GDA data model but which could return NULL, then an attempt was